fix: change color of `hr` in dark mode

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -73,6 +73,10 @@ body.dark {
     border-bottom-color: rgba(255, 255, 255, 0.3);
   }
 
+  hr {
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+
   .navigator {
     a {
       background-color: $navigator-background-color;
